--- a/PimToolFE/src/app/core/components/top-bar/top-bar.component.html
+++ b/PimToolFE/src/app/core/components/top-bar/top-bar.component.html
@@ -1,27 +1,6 @@
-<!--
-<nav class="navbar bg-body-tertiary">
-  <div class="container">
-    <a class="navbar-brand" href="#">
-      <img src="/assets/images/logo_elca.png" alt="Logo" width="56" height="58" class="d-inline-block align-text-bottom me-5">
-      <span class="fw-bold top-bar-font">Project Information Management</span>
-    </a>
-    <ul class="nav">
-      <li class="nav-item">
-        <a class="nav-link" href="#">EN|FR</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Help</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" aria-disabled="true">Log out</a>
-      </li>
-    </ul>
-  </div>
-</nav>
--->
 <div class="container-fluid">
   <div class="row" style="padding-bottom: 10px">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" [routerLink]="['/project/list']" >
         <div class="navbar-brand-name">
           <img src="/assets/images/logo_elca.png" alt="Logo" class="img-responsive" />
           <span class="nav-name">Project Information Management</span>
