--- a/PimToolFE/src/app/core/features/project/project-list/project-list.component.css
+++ b/PimToolFE/src/app/core/features/project/project-list/project-list.component.css
@@ -8,10 +8,26 @@ p {
   height: 38px;
 }
 
- tr td {
+tbody tr td {
   font-family: "Segoe UI Semibold";
   font-size: 14px;
   color: #666666;
+    /* Remove the bottom border */
 }
 
+.pagination-container {
+  display: flex;
+  justify-content: flex-end;
+}
 
+.btn-search {
+  background-color: #0074CB;
+  color: white;
+}
+
+.btn-reset {
+  font-family: "Segoe UI Semibold";
+  font-size: 14pt;
+  background: none;
+  color: #2F85FA;
+}
